package nmsg.isc;

enum Network {
    IP4 = 0;
    IP6 = 1;
}

enum Transport {
    UDP = 0;
    TCP = 1;
    ICMP = 2;
}

message Ncap {
    repeated uint32         user = 1;
    required Network        np = 2;
    required Transport      tp = 3;
    optional fixed32        ip4_src = 4;
    optional fixed32        ip4_dst = 5;
    optional bytes          ip6_src = 6;    // must be 16 bytes
    optional bytes          ip6_dst = 7;    // must be 16 bytes
    optional int32          tp_i0 = 8;      // udp/tcp sport or icmp type
    optional int32          tp_i1 = 9;      // udp/tcp dport or icmp code
    optional bytes          payload = 10;
}
